[gd_scene load_steps=5 format=3 uid="uid://ry3fdpidnd22"]

[ext_resource type="Script" uid="uid://b3p2j5acijmwp" path="res://classes/game_hud/game_hud.gd" id="1_4eiha"]
[ext_resource type="Texture2D" uid="uid://bhu8p2r8x3yym" path="res://assets/graphics/ui/game_hud/item_slot.png" id="2_u1bh5"]
[ext_resource type="Texture2D" uid="uid://cmhjt6x10vu85" path="res://assets/graphics/ui/game_hud/item_mask.png" id="3_ky6qn"]

[sub_resource type="LabelSettings" id="LabelSettings_veq07"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="GameHUD" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_4eiha")

[node name="BaseMargin" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HUD" type="Control" parent="BaseMargin"]
layout_mode = 2

[node name="HealthBar" type="ProgressBar" parent="BaseMargin/HUD"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.163
anchor_top = 0.065
anchor_right = 0.163
anchor_bottom = 0.065
offset_left = -184.64
offset_top = -22.8
offset_right = 184.36
offset_bottom = 23.2
value = 100.0

[node name="WeaponSlot" type="TextureRect" parent="BaseMargin/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.081
anchor_top = 0.856
anchor_right = 0.081
anchor_bottom = 0.856
offset_left = -79.68
offset_top = -80.3201
offset_right = 80.32
offset_bottom = 79.6799
texture = ExtResource("2_u1bh5")
expand_mode = 1

[node name="WeaponMask" type="TextureRect" parent="BaseMargin/HUD/WeaponSlot"]
clip_children = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_ky6qn")
expand_mode = 1

[node name="WeaponIcon" type="TextureRect" parent="BaseMargin/HUD/WeaponSlot/WeaponMask"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="WeaponLabel" type="Label" parent="BaseMargin/HUD/WeaponSlot"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -22.5
offset_right = 63.5
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "Weapon"
label_settings = SubResource("LabelSettings_veq07")
horizontal_alignment = 1
vertical_alignment = 1
